--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ var _tune2 = 0;
 var _fps_frames = 0;
 var _fps_tm = 0;
 var _fps_last = 0;
-
+var _tap_color;
 
 var config = {
     fps_interval              : 4000,
@@ -110,6 +110,55 @@ class Graphics {
         this.ctx.fillText(text, x, y+this.font_size);
     }
 }; // class Graphics
+
+// --------------------------------------------------------------------
+class ColorWheel {
+    constructor(x, y, w, h) {
+        const w2 = Math.floor(w/2);
+        const h2 = Math.floor(h/2);
+        this.cx = x + w2;
+        this.cy = y + h2;
+        this.radius = Math.min(w2,h2);
+        const sector_size = Math.PI/3;
+        this.sectinfo = [
+            { base_theta: 0*sector_size, base_color: new Color(255,0,0),   red_incr: 0, green_incr: +1, blue_incr: 0, },
+            { base_theta: 1*sector_size, base_color: new Color(255,255,0), red_incr: -1, green_incr: 0, blue_incr: 0, },
+            { base_theta: 2*sector_size, base_color: new Color(0,255,0),   red_incr: 0, green_incr: 0, blue_incr: +1, },
+            { base_theta: 3*sector_size, base_color: new Color(0,255,255), red_incr: 0, green_incr: -1, blue_incr: 0, },
+            { base_theta: 4*sector_size, base_color: new Color(0,0,255),   red_incr: +1, green_incr: 0, blue_incr: 0, },
+            { base_theta: 5*sector_size, base_color: new Color(255,0,255), red_incr: 0, green_incr: 0, blue_incr: -1, },
+        ];
+    }
+    draw(gfx) {
+        gfx.draw_circle(this.cx, this.cy, this.radius, config.color_fg);
+        gfx.draw_circle(this.cx, this.cy, this.radius-2, config.color_bg);
+        const radius = Math.floor(this.radius * .90);
+        for (let dy = -radius; dy < radius; ++dy) {
+            for (let dx = -radius; dx < radius; ++dx) {
+                if (dx*dx + dy*dy <= radius*radius) {
+                    const x = this.cx + dx; 
+                    const y = this.cy + dy; 
+                    gfx.draw_rect(x, y, 1, 1, this.color_from_pos(x, y));
+                }
+            }
+        }
+    }
+    color_from_pos(x, y) {
+        const dx = x - this.cx;
+        const dy = y - this.cy;
+        const rho = Math.sqrt(dx*dx + dy*dy);
+        let theta = Math.atan2(dy,dx);
+        if (theta < 0) theta += 2*Math.PI;
+        const sector_size = Math.PI/3;
+        const sector = Math.floor(theta / sector_size); // sector={0..5}
+        const sinfo = this.sectinfo[sector];
+        const sfrac = 256 * (theta - sinfo.base_theta) / sector_size;
+        const red   = sinfo.base_color.red()   + (sinfo.red_incr * sfrac);
+        const green = sinfo.base_color.green() + (sinfo.green_incr * sfrac);
+        const blue  = sinfo.base_color.blue()  + (sinfo.blue_incr * sfrac);
+        return new Color(red, green, blue);
+    }
+}; // class ColorWheel
 
 // --------------------------------------------------------------------
 class Square {
@@ -207,7 +256,7 @@ class Board {
                 if (dx*dx + dy*dy <= tap_radius2) {
                     const xi = wrap(x+dx, this.nx);
                     const yi = wrap(y+dy, this.ny);
-                    this.squares[yi][xi].set(0,0,.5);
+                    this.squares[yi][xi].set(_tap_color.red(), _tap_color.green(), _tap_color.blue());
                 }
             }
         }
@@ -259,12 +308,12 @@ class Game {
         this.board = this.board1;
         this.oboard = this.board2;
         this.show_fps = show_fps;
-        this.menu_up = false;
+        this.color_wheel = null;
     }
     run() {
-        if (this.menu_up) {
+        if (this.color_wheel != null) {
             this.board.draw();
-            this.draw_menu();
+            this.color_wheel.draw(this.gfx);
             return;
         }
         if (this.show_fps)
@@ -280,15 +329,24 @@ class Game {
         this.board = this.oboard;
         this.oboard = tboard;
     }
-    draw_menu() {
-    }
-    menu(up) {
-        this.menu_up = up;
+    toggle_color_wheel() {
+        if (this.color_wheel == null) {
+            const w = this.gfx.ctx.canvas.width;
+            const h = this.gfx.ctx.canvas.height;
+            const m = Math.floor(Math.max(w/10, h/10));
+            const cx = Math.floor(w/2);
+            const cy = Math.floor(w/2);
+            this.color_wheel = new ColorWheel(m, m, w-2*m, h-2*m);
+        } else {
+            this.color_wheel = null;
+        }
     }
     static _event_mousedown(e) {
         if (_game == null) return;
         if (e.shiftKey)
-            _game.menu(!_game.menu_up);
+            _game.toggle_color_wheel();
+        else if (_game.color_wheel != null)
+            _tap_color = _game.color_wheel.color_from_pos(e.clientX, e.clientY);
         else
             _game.event_mouse(e.clientX, e.clientY, config.mouse_down);
     }
@@ -367,6 +425,7 @@ function run_game() {
 
 function main() {
     munge_config();
+    _tap_color = new Color(0,0,0);
     const params = new URLSearchParams(window.location.search);
     const canvas = canvas_resize();
     const gfx = new Graphics(canvas.getContext("2d"), canvas.height*.08);
